# notebooks

./: .gitignore  Pipfile  README.md  main.py  pyproject.toml
notebooks/: news.ipynb  pytorch.ipynb  scrape_wiki_lists.ipynb  strings.ipynb
src/notebooks/: config.py  document_cropping.py  mc4.py  utils.py
src/notebooks.egg-info/: PKG-INFO  SOURCES.txt
src/notebooks/strings/: analysis.py  preprocessing.py
