[tool.black]
line-length = 119

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "notebooks"
version = "0.0.1"
authors = [
  { name="Kasper Junge", email="kasperjuunge@gmail.com"},
]
description = "Random jypyter notebooks and structured code."
readme = "README.md"
requires-python = ">=3.7"
keywords = ["jupyter-notebook"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "pandas"
]

[project.urls]
"Homepage" = "https://github.com/kasperjunge/notebooks"